# op_inventoryd

./: CMakeLists.txt  README.md  forking-daemon.service  inventoryd.init  inventoryd.spec  op_inventoryd.service  op_inventoryd.spec
src/: CMakeLists.txt  inventoryd.c  op_inventoryd  op_inventoryd.c
